#88: fixed last ship overlapping on temple bug

--- a/src/app/game/harbor/harbor.component.scss
+++ b/src/app/game/harbor/harbor.component.scss
@@ -21,7 +21,7 @@ ship::after {
   bottom: 325px;
   left: -65px;
   height: 30px;
-  width: 300px;
+  width: 275px;
 }
 
 .ship23{
@@ -31,7 +31,7 @@ ship::after {
   left: -65px;
 
   height: 30px;
-  width: 300px;
+  width: 275px;
 }
 
 .ship4{
@@ -40,5 +40,5 @@ ship::after {
   bottom: 65px;
   left: -80px;
   height: 30px;
-  width: 300px;
+  width: 275px;
 }
