--- a/src/app/game/market-place/market-place.component.scss
+++ b/src/app/game/market-place/market-place.component.scss
@@ -8,7 +8,7 @@ $factor: 0.6;
 .market-place-container {
   z-index: 10;
   position: absolute;
-  right: 230px;
+  right: 186px;
   bottom: 0;
   height: 250px;
   width: 350px;
@@ -91,7 +91,7 @@ $factor: 0.6;
 
 .harbor {
   /* position of harbor */
-  top: -5px;
-  left: 17px
+  top: 1px;
+  left: 10px;
 }
 /*******************************/
