--- a/src/app/game/temple/temple.component.scss
+++ b/src/app/game/temple/temple.component.scss
@@ -5,12 +5,10 @@
 .temple-container {
   z-index: 0;
 
-  height: 220px;
   width: 27%;
   position: absolute;
   left: 230px;
   bottom: 30px;
-  border-radius: 10px;
 }
 
 .temple {
@@ -68,7 +66,7 @@
 
 .harbor {
   /* position of harbor */
-  top: 22px;
-  left: 107px;
+  top: -213px;
+  left: 166px;
 }
 /*******************************/
